--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .mainbox .userInput label {
   font-size: 19px;
   font-weight: bold;
-  width: 55%;
+  width: 160px;
 }
 .mainbox .userInput input {
   border: 0;
@@ -47,7 +47,7 @@ body {
   border-radius: 10px;
   height: 40px;
   font-size: 17px;
-  width: 45%;
+  width: calc(100% - 160px);
 }
 .mainbox .input {
   display: flex;
