--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ p {
   font-family: "Times New Roman", Times, serif;
   background: blueviolet;
   border-radius: 10px;
-  padding: 6px 15px;
+  padding: 6px;
   color: white;
 }
 
